<resources>
    <string name="app_name">myrooms</string>
    <string name="lease_start_date">Lease Start Date<font color='#FF0000'>*</font></string>
    <string name="lease_end_date">Lease End Date<font color='#FF0000'>*</font></string>
    <string name="deposit_amount">Deposit Amount<font color='#FF0000'>*</font></string>
    <string name="enter_lease_start_date">Enter Lease Start Date</string>
    <string name="enter_lease_end_date">Enter Lease End Date</string>
    <string name="enter_deposit_amount">Enter Deposit Amount</string>
    <string name="nothing">Nothing</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="landing">Landing Page</string>
    <string name="landlord_phone_label_validation">Phone number</string>
    <string name="contact_name_without_validation">Contact Name</string>
    <string name="contact_no_without_validation">Contact No.</string>
    <string name="persnoal_details">Personal Information</string>
    <string name="employment_details">Employment Details</string>
    <string name="lease_details">Lease Details</string>
    <string name="room_allocation">Room Allocation</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="identity_details">Identity Details</string>
    <string name="error_enter_landlord_name">Please enter Landlord name</string>
    <string name="enter_tenant_legal_name">Enter Tenant Legal Name</string>
    <string name="create_tenant">Create Tenant</string>
    <string name="choose_date">Choose Date</string>
    <string name="no_date_chosen">No Date Chosen</string>
    <string name="signature_pad">Signature Pad</string>
    <string name="this_tenant_legal_name_will_be_printed_on_invoices">This tenant legal name will be printed on invoices.</string>
    <string name="customer_legal_name_validation">Tenant Legal Name <font color='#FF0000'>*</font></string>
    <string name="room_property_details">Room &amp; Property Details</string>
    <string name="property_name">Property Name</string>
    <string name="property_name_hint">E.g Room 1 , Room A etc</string>
    <string name="property_type">Property Type</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="desc_rooms">Description</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="select_property_type">Select Property Type</string>
    <string name="select_rooms_numbers">Select Rooms Number</string>
    <string name="pricing_landlord_details">Pricing and Landlord Details</string>
    <string name="property_details_amenities">Property Details and Photos</string>
    <string name="optional_detail_custom_option">Optional Details and Customizable Sections</string>
    <string name="room_address">Address</string>
    <string name="would_you_like_to">Would you like to join...</string>
    <string name="as_customer">As Customer</string>
    <string name="as_owner">As Owner</string>
    <string name="next">Next</string>
    <string name="email_phone">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="fullname">Full Name</string>
    <string name="not_have_account">Haven\'t an account?</string>
    <string name="count_km">You have entered %s KM. are you sure?</string>
    <string name="count_booking_id">Booking Id: %s</string>
    <string name="count_total_slip">Total Slip: %s</string>
    <string name="count_total_amount">Total Amount: %s</string>
    <string name="diff_year">year</string>
    <string name="diff_years">years</string>
    <string name="diff_month">month</string>
    <string name="diff_months">months</string>
    <string name="diff_week">week</string>
    <string name="diff_weeks">weeks</string>
    <string name="diff_day">day</string>
    <string name="diff_days">days</string>
    <string name="diff_hour">hour</string>
    <string name="diff_hours">hours</string>
    <string name="diff_minute">minute</string>
    <string name="diff_minutes">minutes</string>
    <string name="diff_second">second</string>
    <string name="diff_seconds">seconds</string>
    <string name="ago">%1$s ago</string>
    <string name="go_to_setting">Go To Settings</string>
    <string name="go">Go</string>
    <string name="ok">Ok</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="discard">Discard</string>
    <string name="no">No</string>
    <string name="yes_top_up">Yes, Top Up</string>
    <string name="yes_remove">Yes, Remove</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="got_it_thanks">Got it, Thanks</string>
    <string name="okay_got_it">Okay, Got it</string>
    <string name="retry">Re-try</string>
    <string name="deny">Deny</string>
    <string name="action">Action</string>
    <string name="submit">Submit</string>
    <string name="continu">Continue</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="standard_error_408">We ran into an issue getting you the information you requested. Please try again later.</string>
    <string name="standard_error_0">It seems like there is an error. Please go back and try again.</string>
    <string name="error_no_internet">No Internet. Please check your network status and try again</string>
    <string name="error_we_couldnt_find">We couldn\'t find what you were looking for. Try again later.</string>
    <string name="error_enter_full_name">Please enter full name</string>
    <string name="error_enter_first_name">Please enter first name</string>
    <string name="error_enter_last_name">Please enter last name</string>
    <string name="error_enter_email">Please enter email</string>
    <string name="error_enter_valid_email">Please enter valid email</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="error_enter_confirm_password">Please enter confirm password</string>
    <string name="error_enter_old_password">Please enter old password</string>
    <string name="error_enter_new_password">Please enter new password</string>
    <string name="error_enter_confirm_new_password">Please enter confirm password</string>
    <string name="error_password_does_not_match">Password and confirm password not matched</string>
    <string name="error_enter_valid_password_hint">Please enter valid password (minimum 8 characters with at least 1 capital letter, number and special char)</string>
    <string name="error_enter_mobile_no">Please enter mobile number</string>
    <string name="error_enter_valid_mobile_no">Please enter valid mobile number</string>
    <string name="error_enter_email_otp">Please enter email otp</string>
    <string name="error_enter_otp">Please enter otp</string>
    <string name="error_enter_km">Please enter km</string>
    <string name="error_km_greter_garage_Start">Point start km can not be less than Garage start km</string>
    <string name="error_km_greter_point_start">Point end km can not be less than Point start km</string>
    <string name="error_km_greter_point_end">Garage end km can not be less than Point end km</string>
    <string name="error_enter_company_name">Please enter company name</string>
    <string name="error_select_company_name">Please select company name</string>
    <string name="error_select_branch_name">Please select branch name</string>
    <string name="error_select_customer_name">Please select customer name</string>
    <string name="error_select_type">Please select type</string>
    <string name="error_select_city">Please select city</string>
    <string name="error_select_rental_location">Please select rental location</string>
    <string name="error_select_state">Please select state</string>
    <string name="error_select_duty_Type">Please select duty type</string>
    <string name="error_select_supplier">Please select supplier</string>
    <string name="error_select_supplier_package">Please select supplier package</string>
    <string name="error_enter_rental_location">Please enter rental location</string>
    <string name="error_enter_guest_name">Please enter guest name</string>
    <string name="error_enter_contant_no">Please enter contact no</string>
    <string name="error_enter_alternate_no">Please enter alternate no</string>
    <string name="error_enter_amount">Please enter amount</string>
    <string name="error_enter_valid_amount">Amount shold be greter than 0</string>
    <string name="error_draw_signature">Please draw signature</string>
    <string name="error_upload_image">Please upload image</string>
    <string name="error_upload_receipt">Please upload receipt</string>
    <string name="error_enter_supplier_name">Please enter supplier name</string>
    <string name="error_enter_no_of_passengers">Please enter no of passengers</string>
    <string name="error_enter_type_of_duty">Please enter type of duty</string>
    <string name="error_select_car_type">Please select car type</string>
    <string name="error_select_payment_method">Please select payment method</string>
    <string name="error_select_car">Please select car</string>
    <string name="error_select_driver">Please select driver</string>
    <string name="error_select_pickup_date">Please select pickup date</string>
    <string name="error_select_pickup_time">Please select pickup time</string>
    <string name="error_enter_pickup_address">Please enter pickup address</string>
    <string name="error_enter_arrival_details">Please enter arrival details</string>
    <string name="error_select_birthdate">Please select birthdate</string>
    <string name="error_select_drop_date">Please select drop date</string>
    <string name="error_select_drop_time">Please select drop time</string>
    <string name="error_enter_drop_address">Please enter drop address</string>
    <string name="error_enter_departure_details">Please enter departure details</string>
    <string name="error_enter_special_interactions">Please enter special interactions</string>
    <string name="error_select_gender">Please select gender</string>
    <string name="error_select_country">Please select country</string>
    <string name="error_accept_terms_and_condition">Please select terms of service</string>
    <string name="alternate_no">Alternate No.</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="enter_address_line_1">Enter Address Line 1</string>
    <string name="enter_address_line_2">Enter Address Line 2</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="address_line_1_validation">Address Line 1<font color='#FF0000'>*</font></string>
    <string name="country_validation">Country<font color='#FF0000'>*</font></string>
    <string name="state_validation">State<font color='#FF0000'>*</font></string>
    <string name="city_validation">City<font color='#FF0000'>*</font></string>
    <string name="pincode_validation">Pincode<font color='#FF0000'>*</font></string>
</resources>